LT - code quality - upstream first

--- a/elytron/2016-09-15-eap71-dr4.html
+++ b/elytron/2016-09-15-eap71-dr4.html
@@ -189,7 +189,7 @@ class: center, middle
 # Questions?
 
     </textarea>
-    <script src="remark-0.13.min.js">
+    <script src="../remark-0.13.min.js">
     </script>
     <script>
       var slideshow = remark.create();
