--- a/elytron/2016-09-19-modifiable-fsRealm.html
+++ b/elytron/2016-09-19-modifiable-fsRealm.html
@@ -156,7 +156,7 @@ class: center, middle
 # Questions?
 
     </textarea>
-    <script src="remark-0.13.min.js">
+    <script src="../remark-0.13.min.js">
     </script>
     <script>
       var slideshow = remark.create();
