Small Code quality LT improvements

--- a/unsorted/2017-02-27-LT-code-quality.html
+++ b/unsorted/2017-02-27-LT-code-quality.html
@@ -38,6 +38,8 @@ class: center, middle
 
 * http://checkstyle.sourceforge.net/
 
+--
+
 ```xml
 <plugin>
     <groupId>org.apache.maven.plugins</groupId>
@@ -173,6 +175,7 @@ class: center, middle
 * build runs
   * either in Docker container (default)
   * or in full VM
+* Time limit: 50min for a build
 
 ---
 
@@ -185,6 +188,7 @@ class: center, middle
 ## Codefactor.io
 * https://www.codefactor.io/
 * Automated Code Review for GitHub
+  * similar to Codacy, but without Java static analysis support
 
 ---
 
